--- a/styles/style.css
+++ b/styles/style.css
@@ -12,12 +12,18 @@ body {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 
 }
 
 main {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+
+
 }
 
 /* top players style */
@@ -57,12 +63,14 @@ main {
 
 hr {
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 
 /* top blogs style */
 .blogs {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
 }
 
 .blog {
@@ -88,4 +96,99 @@ hr {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+
+/* latest course style */
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: #FFC014;
+}
+
+.fa-star.empty {
+    color: #AEAEAE
+}
+
+.course-duration {
+    background-color: lightpink;
+    border-radius: 5px;
+    padding: 2px;
+    color: deeppink;
+    margin-right: 20px;
+}
+
+/*-----------------
+    Media quaries 
+ ------------------*/
+
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+        padding: 0;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .player {
+        flex-direction: column;
+    }
+
+    .blog {
+        flex-direction: column;
+    }
+
+    .blog-title {
+        font-size: 100%;
+    }
+
+}
+
+/* tablet devices */
+
+@media only screen and (min-width:688px) and (max-width:992px) {
+
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+
+    .player {
+        flex-direction: column;
+    }
+
+    .blog {
+        align-items: center;
+
+    }
+
+
 }
