--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,68 @@ body {
 
 }
 
+.nav-main {
+    display: flex;
+    background-color: #562EFF;
+    width: 100%;
+    height: 94px;
+    justify-content: space-between;
+}
+
+.nav-main .nav-ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+.nav-ul li {
+    list-style: none;
+}
+
+.nav-main .nav-ul li a {
+    text-decoration: none;
+    padding: 36px;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.nav-main .nav-ul li a img {
+    width: 51px;
+    height: 51px;
+}
+
+.logo {
+    display: flex;
+    margin-top: 26px;
+    margin-bottom: 17px;
+    margin-left: 125px;
+}
+
+.logo-icon {
+    height: 51px;
+    width: 40.24px;
+    padding-right: 15px;
+}
+
+.logo-name {
+    width: 54px;
+    height: 36px;
+    position: relative;
+    bottom: 30%;
+}
+
+.logo-name p {
+    font-size: 24px;
+    font-weight: 500;
+    color: white;
+}
+
+.logo-icon img {
+    height: 100%;
+    width: 100%;
+}
+
 main {
     display: flex;
     flex-direction: column;
